[tool.poetry]
name = "databros"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "GLPv3"

[tool.poetry.dependencies]
python = "^3.10"
jsonschema = "^4.4.0"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pytest = "^7.0.1"
ipython = "^8.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
